force-app/main/default/objects/Associated_Orders__c/Associated_Orders__c.object-meta.xml
<CustomObject>
    <label>Associated Order</label>
    <nameField>
        <displayFormat>AO - {00000000}</displayFormat>
        <label>Associated Orders #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>