force-app/main/default/objects/Associated_Orders__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Associated Orders</relationshipLabel>
    <relationshipName>Associated_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>