force-app/main/default/objects/Associated_Orders__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Associated Orders</relationshipLabel>
    <relationshipName>Associated_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>