force-app/main/default/objects/Associated_Orders__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>TEXT (Order__r.ccrz__OrderNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>