force-app/main/default/objects/Associated_Orders__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>Text( Order__r.ccrz__OrderStatus__c )</formula>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>