force-app/main/default/objects/Associated_Orders__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>Order__r.ccrz__PaymentMethod__c</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>